--- a/content/features/commandPanel.mdx
+++ b/content/features/commandPanel.mdx
@@ -66,28 +66,30 @@ The search engine is forgiving and intelligent:
 2. Enable **Web search suggestions**
 3. Choose your preferred search engine (Google, DuckDuckGo, Bing, Yahoo, Perplexity)
 
-### Website-Specific Search Shortcuts
+<br />
+<p align="center">
+  <img src="/public/assets/command panel settings.jpeg" alt="Command Panel" width="800" />
+</p
+
+
+
+**Website-Specific Search Shortcuts**
+
 
 Create custom shortcuts to search specific websites directly:
 
 Example: Type `tw claude code` to search Twitter for "claude code"
 
 Configure in **Preferences → Command Panel → Website Search Shortcuts**
+<br />
+<p align="center">
+  <img src="/public/assets/command panel tab.jpeg" alt="Command Panel" width="800" />
+</p
 
 
 
-## Tips & Tricks
+## Live Tab Switching
 
-### Instant Link Creation
-Found a useful page? Press **⌘⌃K** → **⌘V** to paste the URL and create a link without leaving your keyboard.
-
-### Cross-Workspace Search
-The command panel searches across *all* spaces, making it perfect for finding links when you can't remember which workspace they're in.
-
-### Recent Items as Temporary Bookmarks
-Don't clutter your saved links with one-time research. The command panel surfaces recent items automatically - save only what you'll revisit.
-
-### Live Tab Switching
 Press **⌘⌃K** and search for an open tab by title. Press Return to switch to that tab instantly - faster than ⌘Tab through apps.
 
 ### Search Ranking
