--- a/content/features/finderIntegration.mdx
+++ b/content/features/finderIntegration.mdx
@@ -5,19 +5,23 @@ Add files, folders, and applications directly from Finder to your sidebar with k
 ## How It Works
 
 
-SupaSidebar uses AppleScript to communicate with Finder, enabling seamless file and folder management:
-- Add selected files or folders
-- Add the current Finder folder (ignoring selection)
-- Copy file paths to clipboard
-- All triggered with global keyboard shortcuts
+To add a file, folder, or link to the sidebar, follow these steps:
 
-### Context-Aware Smart Shortcuts
+1.  **Choose the file or folder you want to add**  :
+Select it in Finder or copy/open the link you want to save.
 
-**⌘⌃S** and **⌘⌃C** are context-aware shortcuts that adapt automatically:
-- **In a browser**: Saves current page OR copies URL
-- **In Finder**: Adds selected files/folders OR copies file paths
+2.  **Add it using a shortcut**  :
+Use the **⌘⌃S** and **⌘⌃C** are context-aware shortcuts that adapt automatically and add the selected file, folder, or link to SupaSidebar.
 
-One shortcut, multiple behaviors based on context.
+3.  **Or add it by dragging**  :
+Simply drag the file, folder, or link and drop it directly into the sidebar. SupaSidebar will save it immediately.
+
+<br />
+<p align="center">
+  <img src="/public/assets/Folder getting save on sidebar.jpeg.jpeg" alt="folder" width="800" />
+</p>
+
+
 
 <p>
   Watch this video:
@@ -30,11 +34,10 @@ One shortcut, multiple behaviors based on context.
 **Learn more:** [Smart Shortcuts →](smartShortcuts) - Complete guide to context-aware shortcuts across browsers and Finder
 
 ## Setup
-
-**refer to** : [Set Up](SetUp)
-
 **First Time:**
 When you first use Finder shortcuts, macOS will prompt for permission. Click **OK** to grant access.
+
+***learn more about Set Up on***: [Set Up](SetUp)
 
 ## Using Finder Integration
 
@@ -49,7 +52,7 @@ Select multiple files/folders → Press **⌘⌃S** → All added at once
 
 <br />
 <p align="center">
-  <img src="/saved links.jpeg" alt="Saved File" width="800" />
+  <img src="/public/assets/saved links.jpeg" alt="Saved File" width="800" />
 </p>
 
 **Notification Feedback:**
