--- a/content/features/Index.mdx
+++ b/content/features/Index.mdx
@@ -8,7 +8,7 @@ SupaSidebar brings everything you need closer—your apps, tabs, files, shortcut
 ### Command Panel  :
 Access anything instantly. The Command Panel offers fast, powerful search across apps, files, browser tabs, bookmarks, web queries, and commands with fuzzy search built in. Trigger it globally and jump into tasks without breaking your flow.
 
-***refer to***  :  [Command Panel](commandPanel)
+***learn more on***  :  [Command Panel](commandPanel)
 
 <br/>
 
@@ -16,7 +16,7 @@ Access anything instantly. The Command Panel offers fast, powerful search across
 Customize keyboard shortcuts for actions across SupaSidebar.  
 Launch apps, switch Spaces, open tabs, or trigger commands—all with a keystroke.
 
-***refer to***  :  [Global Shortcuts](globalShortcuts)
+***learn more on***  :  [Global Shortcuts](globalShortcuts)
 
 <br/>
 
@@ -25,7 +25,7 @@ Launch apps, switch Spaces, open tabs, or trigger commands—all with a keystrok
 A unified browsing experience across Safari, Chrome, Brave, Arc, and more.  
 Browse active tabs, revisit recent ones, set default browsers, and configure search engine preferences from a single interface.
 
-***refer to***  :  [Browser Integration](browserIntegration)
+***learn more on***  :  [Browser Integration](browserIntegration)
 
 <br/>
 
@@ -34,7 +34,7 @@ Browse active tabs, revisit recent ones, set default browsers, and configure sea
 Choose where each link opens by setting your preferred browser.  
 Enable or disable individual browsers and fine-tune link-opening behavior to match your workflow.
 
-***refer to***  :  [Browser Selection](browserSelection)
+***learn more on***  :  [Browser Selection](browserSelection)
 
 <br/>
 
@@ -42,7 +42,7 @@ Enable or disable individual browsers and fine-tune link-opening behavior to mat
 ### Floating Button  :
 A quick-access floating launcher for essential actions—open the Command Panel, switch Spaces, and access pinned items—always within reach.
 
-***refer to***  :  [Floating Button](floatinButton)
+***learn more on***  :  [Floating Button](floatinButton)
 
 <br/>
 
@@ -51,7 +51,7 @@ A quick-access floating launcher for essential actions—open the Command Panel,
 View active tabs across all connected browsers in real time.  
 Search, filter, and switch instantly without juggling windows or tabs.
 
-***refer to***  :  [Live Tabs](lifeTabs)
+***learn more on***  :  [Live Tabs](lifeTabs)
 
 <br/>
 
@@ -60,7 +60,7 @@ Search, filter, and switch instantly without juggling windows or tabs.
 Trigger actions through intuitive mouse gestures.  
 Open the sidebar, launch the Command Panel, switch Spaces, or run shortcuts using customizable mouse actions.
 
-***refer to***  :  [Mouse Triggers](mouseTriggers)
+***learn more on***  :  [Mouse Triggers](mouseTriggers)
 
 <br/>
 
@@ -69,7 +69,7 @@ Open the sidebar, launch the Command Panel, switch Spaces, or run shortcuts usin
 Pin your frequently used apps, files, folders, websites, and shortcuts.  
 Keep your most important items one click away.
 
-***refer to***  :  [Pinned Items](pinnedItems)
+***learn more on***  :  [Pinned Items](pinnedItems)
 
 <br/>
 
@@ -78,7 +78,7 @@ Keep your most important items one click away.
 Quickly return to recently opened files, folders, or links.  
 A streamlined view designed to help you resume work instantly.
 
-***refer to***  :  [Recent Items](recentItems)
+***learn more on***  :  [Recent Items](recentItems)
 
 <br/>
 
@@ -87,7 +87,7 @@ A streamlined view designed to help you resume work instantly.
 Create custom shortcuts that combine actions—open apps, run scripts, switch browsers, or launch websites.  
 Build workflows that match your unique setup.
 
-***refer to***  :  [Smart Shortcuts](smartShortcuts)
+***learn more on***  :  [Smart Shortcuts](smartShortcuts)
 
 <br/>
 
@@ -96,7 +96,7 @@ Build workflows that match your unique setup.
 Organize your sidebar with dynamic groups that update automatically.  
 Group apps, links, or files based on custom rules for a clean, adaptive layout.
 
-***refer to***  :  [Smart Floders](smartFloders)
+***learn more on***  :  [Smart Floders](smartFloders)
 
 <br/>
 
@@ -106,7 +106,7 @@ Create dedicated workspaces inside SupaSidebar.
 Switch between Work, Study, Personal, Research, or Custom Spaces.  
 Rename Spaces, set defaults, and tailor each Space to your workflow.
 
-***refer to***  :  [Spaces](spaces)
+***learn more on***  :  [Spaces](spaces)
 
 <br/>
 
@@ -114,7 +114,7 @@ Rename Spaces, set defaults, and tailor each Space to your workflow.
 ### Finder Integration  :
 Access important folders, frequently used directories, and recent files directly from the sidebar for faster navigation across your Mac.
 
-***refer to***  :  [Finder Integration](finderIntegration)
+***learn more on***  :  [Finder Integration](finderIntegration)
 
 <br/>
 
@@ -124,7 +124,7 @@ Access important folders, frequently used directories, and recent files directly
 SupaSidebar works seamlessly with macOS, requesting only the permissions required for features like global shortcuts, mouse triggers, browser access, and live tabs.  
 Clear permission steps ensure a smooth onboarding experience.
 
-***refer to***  :  [Set Up](setUp)
+***learn more on***  :  [Set Up](setUp)
 <br/>
 
 
