Update commandPanel.mdx (#83)

--- a/content/features/commandPanel.mdx
+++ b/content/features/commandPanel.mdx
@@ -75,21 +75,14 @@ The search engine is forgiving and intelligent:
 
 **Website-Specific Search Shortcuts**
 
+<br />
+<p align="center">
+  <img src="/public/assets/command panel settings.jpeg" alt="command panel" width="800" />
+</p>
 
 Create custom shortcuts to search specific websites directly:
 
-Example: Type `tw claude code` to search Twitter for "claude code"
-
-Configure in **Preferences → Command Panel → Website Search Shortcuts**
-<br />
-<p align="center">
-  <img src="/public/assets/command panel tab.jpeg" alt="Command Panel" width="800" />
-</p
-
-
-
-## Live Tab Switching
-
+##Live Tab Switching
 Press **⌘⌃K** and search for an open tab by title. Press Return to switch to that tab instantly - faster than ⌘Tab through apps.
 
 ### Search Ranking
