--- a/content/features/commandPanel.mdx
+++ b/content/features/commandPanel.mdx
@@ -7,7 +7,7 @@ Lightning-fast search and command palette for instant navigation across all your
 
 <br />
 <p align="center">
-  <img src="/fuzzy match.jpeg" alt="fuzzy match" width="800" />
+  <img src="/public/assets/fuzzy match.jpeg" alt="fuzzy match" width="800" />
 </p>
 
 The Command Panel is a keyboard-driven interface that appears instantly with **⌘⌃K**. Start typing and results appear in real-time, powered by fuzzy search that finds matches even with typos or partial words.
@@ -37,7 +37,7 @@ The search engine is forgiving and intelligent:
 
 <br />
 <p align="center">
-  <img src="/fuzzy search.jpeg" alt="Fuzzy Search Power" width="800" />
+  <img src="/public/assets/fuzzy search.jpeg" alt="Fuzzy Search Power" width="800" />
 </p>
 
 ## Opening the Command Panel
