--- a/content/features/spaces.mdx
+++ b/content/features/spaces.mdx
@@ -8,10 +8,10 @@ Organize your digital life into separate workspaces - one for work, one for pers
 ## How It Works
 <br />
 <p align="center">
-  <img src="/saved spaces.jpeg" alt="saved spaces" width="800" />
+  <img src="/public/assets/saved spaces.jpeg" alt="saved spaces" width="800" />
 </p>
 
-Each Space is an independent workspace containing its own set of:
+Each Space is an in dependent workspace containing its own set of:
 - Saved links and folders
 - Smart folders
 - Recent items (optional)
@@ -52,24 +52,14 @@ Choose which space opens when you launch SupaSidebar:
 
 <br />
 <p align="center">
-  <img src="/automation.jpeg" alt="default set up and new space" width="800" />
+  <img src="/public/assets/automation.jpeg" alt="default set up and new space" width="800" />
 </p>
 
 ## Using Spaces
 
-### Switching Spaces
-
-**From Sidebar:**
-Click the space selector dropdown at the top
-
-**With Keyboard:**
-- **⌘⌃←** / **⌘⌃→** - Cycle through spaces
-- **⌘⌃1** through **⌘⌃9** - Jump directly to space 1-9
-
 ### Adding Links to Spaces
 
 When you save a link (⌘⌃S), it's automatically added to your **current space**.
-
 To move links between spaces:
 1. Right-click the link
 2. Select **Move to Space**
@@ -83,7 +73,7 @@ Each space has its own:
 - **Pinned Items**: Quick-access favorites (shared across all spaces)
 <br />
 <p align="center">
-  <img src="/space and folders.jpeg" alt="space and folders" width="800" />
+  <img src="/public/assets/space and folders.jpeg" alt="space and folders" width="800" />
 </p>
 
 ## Advanced Features
@@ -98,26 +88,6 @@ Enable keyboard shortcuts for instant space switching:
 
 This lets you jump directly to specific spaces without cycling.
 
-### Browser Tab Management (BETA)
-
-**Premium Feature**: Automatically save and restore browser tabs when switching spaces.
-
-1. Open **Preferences → Spaces**
-2. Enable **Save tabs on space switch**
-3. When you switch spaces, SupaSidebar:
-   - Saves all open browser tabs from the current space
-   - Restores previously saved tabs for the new space
-   - Optionally force-quits browsers between spaces for clean transitions
-
-### Live Tabs Filtering
-
-When [Live Tabs](liveTabs) is enabled, you can filter tabs by space:
-
-1. Open **Preferences → Live Tabs**
-2. Enable **Filter tabs by current space**
-3. Only tabs from websites saved to the current space will appear
-
-Example: In "Work" space, only see work-related tabs.
 
 ## Keyboard Shortcuts
 
