--- a/content/features/finderIntegration.mdx
+++ b/content/features/finderIntegration.mdx
@@ -18,7 +18,7 @@ Simply drag the file, folder, or link and drop it directly into the sidebar. Sup
 
 <br />
 <p align="center">
-  <img src="/public/assets/Folder getting save on sidebar.jpeg.jpeg" alt="folder" width="800" />
+  <img src="/public/assets/Folder getting save on sidebar.jpeg" alt="folder" width="800" />
 </p>
 
 
@@ -31,7 +31,7 @@ Simply drag the file, folder, or link and drop it directly into the sidebar. Sup
 </p>
 
 
-**Learn more:** [Smart Shortcuts →](smartShortcuts) - Complete guide to context-aware shortcuts across browsers and Finder
+[learn more](smartShortcuts) - Complete guide to context-aware shortcuts across browsers and Finder
 
 ## Setup
 **First Time:**
@@ -123,7 +123,7 @@ Example structure:
 
 <br />
 <p align="center">
-  <img src="/folder.jpeg" alt="folder" width="800" />
+  <img src="/public/assets/folder.jpeg" alt="folder" width="800" />
 </p>
 
 ### Smart Folders for Files
