--- a/content/features/floatingButton.mdx
+++ b/content/features/floatingButton.mdx
@@ -6,7 +6,7 @@ A persistent, draggable button that floats above all windows for one-click sideb
 
 <br />
 <p align="center">
-  <img src="/floating button.jpeg" alt="Floating Button" width="800" />
+  <img src="/public/assets/floating button.jpeg" alt="Floating Button" width="800" />
 </p>
 
 The Floating Button is a small, semi-transparent button that stays visible above all other windows. Click it once to toggle the sidebar - no keyboard needed.
@@ -27,7 +27,7 @@ The Floating Button is a small, semi-transparent button that stays visible above
 <p>
   Watch this video:
   <a href="https://youtu.be/DgkGX2eQzq4" target="_blank">
-Floatin Button Drag
+Floating Button Drag
   </a>
 </p>
 
@@ -41,7 +41,7 @@ Floatin Button Drag
 3. Button appears immediately
 <br />
 <p align="center">
-  <img src="/Floating Button Toggle.jpeg" alt="Floating Button Toggle" width="800" />
+  <img src="/public/assets/Floating Button Toggle.jpeg" alt="Floating Button Toggle" width="800" />
 </p>
 
 ### No Permissions Required
