--- a/content/features/globalShortcuts.mdx
+++ b/content/features/globalShortcuts.mdx
@@ -20,7 +20,7 @@ Global shortcuts work from anywhere on your Mac - whether you're in a browser, t
 ### Core Shortcuts  :
 <br />
 <p align="center">
-  <img src="/Global Shortcuts.jpeg" alt="Global shortcut" width="800" />
+  <img src="/public/assets/Global Shortcuts.jpeg" alt="Global shortcut" width="800" />
 </p>
 
 | Shortcut | Action | Description |
