--- a/content/features/recentItems.mdx
+++ b/content/features/recentItems.mdx
@@ -6,7 +6,7 @@ Automatic tracking of your browsing history across all supported browsers - see 
 ## How It Works
 <br />
 <p align="center">
-  <img src="/recent itmes.jpeg" alt="Recent History" width="800" />
+  <img src="/public/assets/recent itmes.jpeg" alt="Recent History" width="800" />
 </p>
 
 
@@ -45,13 +45,16 @@ See [Browser Integration](browserIntegration) for complete list.
 3. Configure display limit (default: 30 items)
 <br />
 <p align="center">
-  <img src="/recent item option.jpeg" alt="select 'recent items' option.jpeg" width="800" />
+  <img src="/public/assets/recent item option.jpeg" alt="select 'recent items' option.jpeg" width="800" />
 </p>
 
 
-### Required Permissions
+### Required Permissions  :
 
-***refer to***  : [Set Up](SetUp)
+Browser integration requires Automation permissions and for Accessibility access for enhanced features,
+[Learn More](SetUp) to learn more about the set up.
+
+
 ### Configure Display Limit
 
 
@@ -118,25 +121,6 @@ By default, recent items use the page title from the browser. To customize:
 
 The custom name persists even if you revisit the page - SupaSidebar won't overwrite your custom name.
 
-### Firefox Keyboard Shortcuts
-
-Firefox has limited AppleScript support. To enable recent tracking:
-
-1. Open **Preferences → Recents**
-2. Enable **Firefox keyboard shortcuts**
-3. SupaSidebar will use a workaround method to track Firefox history
-
-**Trade-off**: Slightly slower tracking, but works reliably.
-
-### Space Filtering
-
-When using [Spaces](spaces), recent items can be filtered by current space:
-
-1. Open **Preferences → Recents**
-2. Enable **Show only items from current space**
-3. Only recent items from websites saved to current space appear
-
-Perfect for focused work contexts.
 
 ## Keyboard Shortcuts
 
