--- a/content/features/mouseTriggers.mdx
+++ b/content/features/mouseTriggers.mdx
@@ -21,7 +21,7 @@ Choose which screen edges trigger the sidebar:
 
 When you move your cursor away, the sidebar can auto-hide or stay visible.<br />
 <p align="center">
-  <img src="/mouse triggers.jpeg" alt="Mouse Triggers" width="800" />
+  <img src="/public/assets/mouse triggers.jpeg" alt="Mouse Triggers" width="800" />
 </p>
 
 ## Setup
@@ -35,18 +35,22 @@ When you move your cursor away, the sidebar can auto-hide or stay visible.<br />
 
 <br />
 <p align="center">
-  <img src="/mouse trigger settings panel.jpeg" alt="mouse trigger settings " width="800" />
+  <img src="/public/assets/mouse trigger settings panel.jpeg" alt="mouse trigger settings " width="800" />
 </p>
 
-### Required Permissions
-***refer to***  :  [Set Up](SetUp)
+### Required Permissions  :
+Browser integration requires Automation permissions and for Accessibility access for enhanced features,
+
+[learn more](SetUp) - learn more about set up and permissions.
+
+
 ## Customization
 
 <br />
 <p align="center">
-  <img src="/mouse trigger settings panel.jpeg" alt="mouse trigger settings " width="800" />
+  <img src="/public/assets/mouse trigger settings panel.jpeg" alt="mouse trigger settings " width="800" />
 </p>
-### Edge Threshold
+
 
 Control how close to the edge you need to move:
 
@@ -56,6 +60,8 @@ Use smaller thresholds on large displays, larger on small screens.
 
 ### Hover Delay
 
+
+
 Set how long to hover before sidebar appears:
 
 Set in **Preferences → Mouse Triggers → Hover Delay**
@@ -63,6 +69,8 @@ Set in **Preferences → Mouse Triggers → Hover Delay**
 Increase delay if you accidentally trigger the sidebar when reaching for scroll bars or window edges.
 
 ### Edge Zone Selection
+
+
 
 Choose which edges are active:
 
