--- a/content/features/liveTabs.mdx
+++ b/content/features/liveTabs.mdx
@@ -3,17 +3,13 @@
 Real-time mirror of your currently open browser tabs directly in the sidebar - switch between tabs across all browsers without leaving your keyboard.
 
 ## How It Works
-<br />
-<p align="center">
-  <img src="/lifetabsmultiplebrowser.jpeg" alt="Life Tabs in Multiple Browsers" width="800" />
-</p>
 
 
 Live Tabs continuously monitors your supported browsers and displays all open tabs in real-time within the sidebar. Each tab shows its title, URL, and browser icon.
 
 ### Real-Time Synchronization
 
-**Accessibility Observer** (
+**Accessibility Observer** 
 Instant updates using macOS Accessibility API when tabs are created, switched, or closed - no polling delay.
 <p>
   Watch this video:
@@ -33,7 +29,7 @@ Live Tabs works across all supported browsers simultaneously:
 
 <br />
 <p align="center">
-  <img src="/lifetabsmultiplebrowser.jpeg" alt="Life Tabs in Multiple Browsers" width="800" />
+  <img src="/public/assets/lifetabsmultiplebrowser.jpeg" alt="Life Tabs in Multiple Browsers" width="800" />
 </p>
 
 ### Browser Order Customization
@@ -55,12 +51,16 @@ Organize which browsers appear first in your live tabs list:
 
 <br />
 <p align="center">
-  <img src="/Live Tabs Option.jpeg" alt="Life Tabs" width="800" />
+  <img src="/public/assets/Live Tabs Option.jpeg" alt="Life Tabs" width="800" />
 </p>
 
 
 ### Required Permissions
-**refer to**  :  [Set Up](SetUp)
+Browser integration requires Automation permissions and for Accessibility access for enhanced features,
+
+[Learn More](SetUp)  -  learn more about permissions and set up process
+
+
 ## Using Live Tabs
 
 ### View All Tabs
@@ -92,17 +92,6 @@ In the sidebar, live tabs appear in the **Recents** section (when Live Tabs mode
 This keeps your tab count manageable and prevents duplicate research tabs.
 
 
-## Space-Filtered Tabs (Premium)
-
-When using [Spaces](spaces), Live Tabs can show only tabs from websites saved to your current space:
-
-1. Open **Preferences → Live Tabs**
-2. Enable **Filter by current space**
-3. Only relevant tabs appear in the sidebar
-
-Example: Working in your "Work" space? Only see tabs from work-related domains.
-
-[PLACEHOLDER: Screenshot showing filtered live tabs based on current space]
 
 ## Keyboard Shortcuts
 
