--- a/content/features/globalShortcuts.mdx
+++ b/content/features/globalShortcuts.mdx
@@ -124,21 +124,8 @@ If a shortcut conflicts with another application:
 
 ## Setup
 
-### No Setup Required
+**No Setup Required**
 
-Global shortcuts work immediately after installing SupaSidebar. No configuration needed.
-
-### Optional Permissions
-
-Some shortcuts benefit from additional permissions:
-
-**Browser Integration** (⌘⌃S, ⌘⌃C):
-- System Settings → Automation → Enable browsers
-
-**Finder Integration** (⌘⌃S, ⌘⌃C, ⌘⌥A):
-- System Settings → Automation → Enable Finder
-
-See [Browser Integration](browserIntegration) and [Finder Integration](finderIntegration) for details.
 
 ## Keyboard-First Workflows
 
