--- a/content/features/commandPanel.mdx
+++ b/content/features/commandPanel.mdx
@@ -67,15 +67,15 @@ The search engine is forgiving and intelligent:
 3. Choose your preferred search engine (Google, DuckDuckGo, Bing, Yahoo, Perplexity)
 
 <br />
-<p align="center">
-  <img src="/public/assets/command panel settings.jpeg" alt="Command Panel" width="800" />
-
-
-
 
 <p align="center">
-  <img src="/public/assets/command panel settings.jpeg" alt="command panel" width="800" />
+  <img
+    src="/public/assets/command panel settings.jpeg"
+    alt="command panel"
+    width="800"
+  />
 </p>
+
 
 Create custom shortcuts to search specific websites directly:
 
