--- a/content/gettingStarted.mdx
+++ b/content/gettingStarted.mdx
@@ -8,7 +8,7 @@ Follow these steps to install SupaSidebar on macOS:
 
 <br />
 <p align="center">
-  <img src="/assets/website.png" alt="Blurred background window" width="800" />
+  <img src="/public/assets/website.png" alt="Blurred background window" width="800" />
 </p>
 
 1. Visit the [official SupaSidebar website](https://www.supasidebar.com).  
@@ -17,7 +17,7 @@ Follow these steps to install SupaSidebar on macOS:
 4. Launch SupaSidebar from **Launchpad** or **Spotlight Search**.  
 5. Grant necessary permissions when prompted (Finder and Accessibility access) to enable quick shortcuts and file previews.
 
-{/*
+
 > 💡 **Tip:** If you see a macOS security warning, go to **System Preferences → Privacy & Security → Allow Anyway** to authorize the app.
 
 
