--- a/content/features/smartShortcuts.mdx
+++ b/content/features/smartShortcuts.mdx
@@ -34,7 +34,7 @@ The magic of Smart Shortcuts is their intelligent context detection:
 
 <br />
 <p align="center">
-  <img src="/smart save.jpeg" alt="mouse triggers accessibility" width="800" />
+  <img src="/public/assets/smart save.jpeg" alt="mouse triggers accessibility" width="800" />
 </p>
 
 Press **⌘⌃S** while browsing to instantly capture the current page:
@@ -83,10 +83,6 @@ Press **⌘⌃C** to instantly copy the current page URL:
 - Full URL of current page
 - Clean URL (no tracking parameters removed, just raw URL)
 - Ready to paste anywhere
-<br />
-<p align="center">
-  <img src="/assets/smart copy.jpeg" alt="Smart Copy" width="800" />
-</p>
 
 
 **Use Cases:**
