--- a/content/features/sidebar.mdx
+++ b/content/features/sidebar.mdx
@@ -6,7 +6,7 @@ A lightweight, always-accessible floating panel that gives you instant access to
 
 <br />
 <p align="center">
-  <img src="/default position of sidebar.jpeg" alt="Default position of sidebar" width="800" />
+  <img src="/public/assets/default position of sidebar.jpeg" alt="Default position of sidebar" width="800" />
 </p>
 
 The Sidebar Panel is a floating window that sits on the edge of your screen, ready to appear with a single keystroke. It organizes all your saved content in an easy-to-navigate interface with folders, search, and quick actions.
@@ -53,7 +53,7 @@ The sidebar works out of the box with default settings. To customize:
    - **Sidebar side**: Choose left or right side (or use ⌘⌃L shortcut)
 <br />
 <p align="center">
-  <img src="/default sidebar position.jpeg" alt="default sidebar position.jpeg" width="800" />
+  <img src="/public/assets/default sidebar position.jpeg" alt="default sidebar position.jpeg" width="800" />
 </p>
 
 ## Keyboard Shortcuts
