--- a/content/gettingStarted.mdx
+++ b/content/gettingStarted.mdx
@@ -6,6 +6,7 @@ Welcome to SupaSidebar - your personal productivity assistant designed to keep y
 
 Follow these steps to install SupaSidebar on macOS:
 
+## Image example
 <br />
 <p align="center">
   <img src="/public/assets/website.png" alt="Blurred background window" width="800" />
